# lua-tabled

./: Cargo.toml  README.md  lua-tabled-0.1.0-1.rockspec  test.lua
.github/workflows/: main.yml
src/: lib.rs
testcrate/: Cargo.toml
testcrate/lua_tests/: table_test.lua
testcrate/lua_tests/tests/: test1.lua  test2.lua
testcrate/tests/: tests.rs
