[package]
name = "testcrate"
version = "0.0.0"
authors = ["Maxim Zhiburt <zhiburt@gmail.com>"]
edition = "2021"

[features]
lua54 = ["mlua/lua54"]
lua53 = ["mlua/lua53"]
lua52 = ["mlua/lua52"]
lua51 = ["mlua/lua51"]
luajit = ["mlua/luajit"]

[dependencies]
mlua = { version = "0.8.9", features = ["vendored"] }
